--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,18 +1,54 @@
-@media (min-width: 768px) {
-    .container {
-        flex-direction: row;
-        justify-content: center;
-    }
+@media screen and (min-width: 640px) {
+  .navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
 
-    .card {
-        width: 40%;
-    }
+  .navigation li {
+    display: block;
+    text-align: center;
+  }
 
-    nav ul li {
-        margin: 0 30px;
-    }
+  #menu {
+    display: none;
+  }
 
-    .profile img {
-        width: 100px;
-    }
+  hr {
+    border: 1px solid var(--accent1-color);
+    grid-column: 1/3;
+  }
+
+  header {
+    flex-direction: row;
+    justify-content: center;
+    padding: 30px;
+  }
+
+  header h1 {
+    align-self: center;
+    font-size: x-large;
+    padding-left: 30px;
+  }
+
+  h2 {
+    text-align: start;
+    padding-top: 10px;
+    padding-bottom: 2px;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    column-gap: 10px;
+  }
+
+  /* card styling */
+  .card {
+    text-align: left;
+  }
+
+  .iframe {
+    grid-column: 1/3;
+  }
 }
